--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "peterkahl/time-zone-city",
     "type": "library",
     "description": "Everything you need for working with timezones and world time.",
-    "keywords": ["time-zones", "localization"],
+    "keywords": ["time-zones", "google-maps-api", "time-zone-table", "html-generation", "datetime", "date", "time"],
     "homepage": "https://github.com/peterkahl/TimeZoneCity",
     "license": "Apache License Version 2.0",
     "authors": [
