Fixed Asia/Bangkok table row

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "peterkahl/time-zone-city",
     "type": "library",
-    "description": "Generates HTML code for timezone select with customizable configuration. Detects nearest timezone for given coordinates. And more!",
+    "description": "Detects nearest timezone for given coordinates. Generates HTML code for timezone select with customizable configuration. And more!",
     "keywords": ["time-zones", "timezone-select", "google-maps-api", "time-zone-table", "html-generation", "datetime", "date", "time"],
     "homepage": "https://github.com/peterkahl/TimeZoneCity",
     "license": "Apache License Version 2.0",
