--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
     "name": "peterkahl/time-zone-city",
     "type": "library",
-    "description": "Detects nearest timezone for given coordinates. Generates HTML code for timezone select with customizable configuration. Date and timezones.",
+    "description": "Detects nearest timezone (and country etc.) for given coordinates Generates HTML code for timezone select with customizable configuration.",
     "keywords": ["time-zones", "timezone-select", "google-maps-api", "time-zone-table", "html-generation", "datetime", "date", "time"],
     "homepage": "https://github.com/peterkahl/TimeZoneCity",
     "license": "Apache-2.0",
     "authors": [
         {
             "name": "Peter Kahl",
-            "homepage": "https://www.cidrcalculator.com/",
+            "homepage": "https://github.com/peterkahl",
             "role": "Developer"
         }
     ],
